# peruca-head

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.sh
.claude/agents/: arquiteto.md  cientista.md  programador-tester.md  programador.md
scripts/: generate_stt_fixture.py
src/: composition.py  config.py  main.py
src/application/: voice_loop.py
src/application/use_cases/: check_brain_health.py  listen.py  speak_text.py  text_turn.py  voice_turn.py
src/domain/models/: audio_buffer.py  conversation.py  reply.py  transcript.py  turn_outcome.py  voice_state.py
src/domain/ports/: brain_client.py  brain_health.py  player.py  recorder.py  speaker.py  transcriber.py  trigger.py
src/infra/audio/: cue_factory.py  sounddevice_player.py  sounddevice_recorder.py
src/infra/brain/: http_peruca_client.py
src/infra/stt/: remote_whisper_transcriber.py  whisper_transcriber.py
src/infra/trigger/: enter_trigger.py  vosk_trigger.py  wakeword_trigger.py
src/infra/tts/: piper_speaker.py
src/tests/: conftest.py
src/tests/fakes/: fake_brain_client.py  fake_brain_health_check.py  fake_player.py  fake_recorder.py  fake_speaker.py  fake_transcriber.py
src/tests/integration_tests/: test_peruca_contract.py  test_remote_whisper_contract.py
src/tests/unit_tests/: test_build_trigger.py  test_config.py  test_main_dispatch.py
src/tests/unit_tests/application/: test_check_brain_health.py  test_listen.py  test_run_chat.py  test_run_chat_speaks.py  test_run_listen.py  test_run_loop.py  test_speak_text.py  test_text_turn.py  test_voice_loop.py  (+2 more)
(+15 files in other folders)
